[java] IDEA-381268 part of Improve preview for postfix completion.
- convert a part of java postfix to ModCommand

GitOrigin-RevId: 580cef3a82c93edc06c5e330b290d67a87d02928