@@ -2,15 +2,21 @@
 package com.intellij.codeInsight.template.postfix.templates.editable;
 
 import com.intellij.codeInsight.CodeInsightBundle;
+import com.intellij.codeInsight.template.CustomTemplateCallback;
 import com.intellij.codeInsight.template.Template;
 import com.intellij.codeInsight.template.TemplateManager;
 import com.intellij.codeInsight.template.impl.TemplateImpl;
+import com.intellij.codeInsight.template.impl.TemplateManagerImpl;
 import com.intellij.codeInsight.template.impl.TextExpression;
 import com.intellij.codeInsight.template.postfix.templates.PostfixLiveTemplate;
 import com.intellij.codeInsight.template.postfix.templates.PostfixTemplate;
 import com.intellij.codeInsight.template.postfix.templates.PostfixTemplateProvider;
 import com.intellij.codeInsight.template.postfix.templates.PostfixTemplatesUtils;
 import com.intellij.codeInsight.unwrap.ScopeHighlighter;
+import com.intellij.modcommand.ActionContext;
+import com.intellij.modcommand.ModCommand;
+import com.intellij.modcommand.ModCommandAction;
+import com.intellij.modcommand.Presentation;
 import com.intellij.openapi.application.ApplicationManager;
 import com.intellij.openapi.command.CommandProcessor;
 import com.intellij.openapi.editor.Document;
@@ -19,10 +25,15 @@ import com.intellij.openapi.project.Project;
 import com.intellij.openapi.util.Pass;
 import com.intellij.openapi.util.TextRange;
 import com.intellij.openapi.util.text.StringUtil;
+import com.intellij.psi.PsiDocumentManager;
 import com.intellij.psi.PsiElement;
+import com.intellij.psi.PsiFile;
+import com.intellij.psi.impl.source.PostprocessReformattingAspect;
+import com.intellij.psi.util.PsiTreeUtil;
 import com.intellij.refactoring.IntroduceTargetChooser;
 import com.intellij.util.Function;
 import com.intellij.util.containers.ContainerUtil;
+import org.jetbrains.annotations.ApiStatus;
 import org.jetbrains.annotations.NotNull;
 import org.jetbrains.annotations.Unmodifiable;
 
@@ -73,7 +84,7 @@ public abstract class EditablePostfixTemplate extends PostfixTemplate {
     }
 
     if (expressions.size() == 1) {
-      prepareAndExpandForChooseExpression(expressions.get(0), editor);
+      prepareAndExpandForChooseExpression(expressions.getFirst(), editor);
       return;
     }
 
@@ -117,6 +128,81 @@ public abstract class EditablePostfixTemplate extends PostfixTemplate {
     return !getExpressions(context, copyDocument, newOffset).isEmpty();
   }
 
+  @ApiStatus.Experimental
+  @Override
+  public @NotNull ModCommand expandMod(@NotNull ActionContext actionContext) {
+    Project project = actionContext.project();
+    TextRange selection = actionContext.selection();
+    List<PsiElement> virtualExpressions = PostprocessReformattingAspect.getInstance(project).disablePostprocessFormattingInside(() -> {
+      PsiFile copyFile = (PsiFile)actionContext.file().copy();
+      Document copyDocument = copyFile.getFileDocument();
+      int startOffset = selection.getStartOffset();
+      startOffset = PostfixLiveTemplate.positiveOffset(startOffset);
+      copyDocument.deleteString(startOffset, selection.getEndOffset());
+      PsiDocumentManager.getInstance(project).commitDocument(copyDocument);
+      getProvider().preCheckModCommand(copyFile, startOffset);
+      PsiDocumentManager.getInstance(project).commitDocument(copyDocument);
+      PsiElement context = CustomTemplateCallback.getContext(copyFile, PostfixLiveTemplate.positiveOffset(startOffset));
+      return getExpressions(context, context.getContainingFile().getFileDocument(), startOffset);
+    });
+    if (virtualExpressions.isEmpty()) {
+      return ModCommand.nop();
+    }
+
+    if (virtualExpressions.size() == 1) {
+      return createModCommand(actionContext, selection, virtualExpressions.getFirst());
+    }
+
+    List<ModCommandAction> actions = ContainerUtil.mapNotNull(
+      virtualExpressions,
+      expr -> buildExpandModAction(expr, getElementRenderer().fun(expr), selection));
+    if (actions.isEmpty()) {
+      return ModCommand.nop();
+    }
+    return ModCommand.chooseAction(CodeInsightBundle.message("dialog.title.expressions"), actions);
+  }
+
+  @SuppressWarnings("HardCodedStringLiteral") // expression text is used as chooser item title
+  private @NotNull ModCommandAction buildExpandModAction(@NotNull PsiElement virtualExpression,
+                                                         @NotNull String title,
+                                                         @NotNull TextRange key) {
+
+    return new ModCommandAction() {
+      @Override
+      public @NotNull Presentation getPresentation(@NotNull ActionContext ctx) {
+        return Presentation.of(title);
+      }
+
+      @Override
+      public @NotNull ModCommand perform(@NotNull ActionContext ctx) {
+        return createModCommand(ctx, key, virtualExpression);
+      }
+
+      @Override
+      public @NotNull String getFamilyName() {
+        return title;
+      }
+    };
+  }
+
+  private @NotNull ModCommand createModCommand(@NotNull ActionContext ctx, @NotNull TextRange key, @NotNull PsiElement virtualExpression) {
+    return ModCommand.psiUpdate(ctx.withSelection(new TextRange(key.getStartOffset(), key.getStartOffset())), document -> {
+                                  document.deleteString(key.getStartOffset(), key.getEndOffset());
+                                },
+                                updater -> {
+                                  updater.getDocument().deleteString(key.getStartOffset() - 1, key.getStartOffset());
+                                  PsiDocumentManager.getInstance(ctx.project()).commitDocument(updater.getDocument());
+                                  String exprText = virtualExpression.getText();
+                                  PsiElement expression = PsiTreeUtil.findSameElementInCopy(virtualExpression, updater.getPsiFile());
+                                  TextRange rangeToRemove = getRangeToRemove(expression);
+                                  TemplateImpl template = myLiveTemplate.copy();
+                                  updater.getDocument().deleteString(rangeToRemove.getStartOffset(), rangeToRemove.getEndOffset());
+                                  template.addVariable("EXPR", new TextExpression(exprText), false);
+                                  addTemplateVariables(expression, template);
+                                  TemplateManagerImpl.updateTemplate(template, updater);
+                                });
+  }
+
   protected void addTemplateVariables(@NotNull PsiElement element, @NotNull Template template) {
   }
 
@@ -153,7 +239,8 @@ public abstract class EditablePostfixTemplate extends PostfixTemplate {
   private void prepareAndExpandForChooseExpression(@NotNull PsiElement element, @NotNull Editor editor) {
     ApplicationManager.getApplication().runWriteAction(
       () -> CommandProcessor.getInstance().executeCommand(
-        element.getProject(), () -> expandForChooseExpression(element, editor), CodeInsightBundle.message("command.expand.postfix.template"),
+        element.getProject(), () -> expandForChooseExpression(element, editor),
+        CodeInsightBundle.message("command.expand.postfix.template"),
         PostfixLiveTemplate.POSTFIX_TEMPLATE_ID));
   }
 
